# GePeTo_responde

./: .env  .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
